# welcome-tour

./: CMakeLists.txt  config.h.in
assets/: CMakeLists.txt  desktop.in  gresource.xml.in  gschema.xml.in  ui.glade  ui.glade~
cmake/: FindHandy.cmake  rlxosUtils.cmake
src/: CMakeLists.txt  main.cc  style.hh
src/interface/: application.cc  application.hh  window.cc  window.hh
